--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.66.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.18",
     "react-tsparticles": "^2.12.2",
     "react-wrap-balancer": "^1.1.1",
     "recharts": "^3.4.1",
